--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@
 
         .jumbotron {
           background-image: linear-gradient(45deg, rgba(102, 101, 85, 0.8),55%, rgba(45,95,93,0.85)),url("../image/background2.jpeg");
-            background-position: center;
             background-size: cover;
             background-attachment: fixed;
 
@@ -52,7 +51,7 @@
         h2 {
             font-weight: bold;
             font-size: 30px;
-            color: rgb(53, 163, 163);
+            color: rgba(9, 214, 214, 0.849);
         }
         h6,h3{
             color: white;
